typesense/tests/derive/ui/enum.stderr
error: proc-macro derive panicked
 --> $DIR/enum.rs:4:10
  |
4 | #[derive(Typesense, Serialize, Deserialize)]
  |          ^^^^^^^^^
  |
  = help: message: Typesense can be only be derived for structs: Error("expected `struct`")
